--- a/index.html
+++ b/index.html
@@ -4,20 +4,32 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Movies Site</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  Hello world
-  <script src="script.js"></script>
+  <div class="topnav">
+    <a class="active" href="#">Movies Site</a>
+    <div class="search-container">
+      <form role="search" id="form">
+        <input type="search" id="query" name="q" placeholder="Search...">
 
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+      </form>
+    </div>
+  </div>
+  <div style="padding-left:16px"></div>
+  <div class="row">
+  <section id="section">
+<!--      <div class="column">
+      <div class="card">
+        <center><img src="shaw.jpg" class="thumbnail"></center>
+        <h3>Movie Title</h3>
+      </div>
+    </div>-->
+  </section>
+
+  </div>
 </body>
-
+<script src="script.js"></script>
 </html>
